Fixed tested and running!

--- a/New Text Document.html
+++ b/New Text Document.html
@@ -6,16 +6,17 @@
     <title>Document</title>
 </head>
 <body>
+   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <div id="main">
-    <h1 id="title">Muhammed, the greatest human ever lived!</h1>
+        <h1 id="title">Muhammed, the greatest human ever lived!</h1>
     <div id="img-div">
         <figure>
-        <img id="image" src="images/image.jpg" alt="">
-        <figcaption id="img-caption">صلى الله عليه وسلم</figcaption>
+            <img id="image" src="images/image.jpg" alt="">
+            <figcaption id="img-caption">صلى الله عليه وسلم</figcaption>
         </figure>
     </div>
-    <p id="tribute-info">The mercy that has been sent to us</p>
-    <a href="https://en.wikipedia.org/wiki/Muhammad" target="_blank">Wiki info</a>
+        <p id="tribute-info">The mercy that has been sent to us</p>
+        <a id="tribute-link" href="https://en.wikipedia.org/wiki/Muhammad" target="_blank">Wiki info</a>
     </div>
 </body>
 </html>
